--- a/vaade.html
+++ b/vaade.html
@@ -44,7 +44,7 @@
    
 </head>
 <body>
-    <div class="container">
+    <div class="container style="text-align: center;">
         <h1 class="mB50 mT20">Sõidupäevik</h1>
         <button class="btn btn-primary" onclick="maaraAsukoht()">Määra asukoht</button>
         <p class="mT20" id="asukoht"></p>
