--- a/vaade.html
+++ b/vaade.html
@@ -40,11 +40,13 @@
         #preview {
             display: none;
         }
+        .center {
+            text-align: center;
     </style>
    
 </head>
 <body>
-    <div class="container style="text-align: center !important;">
+    <div class="container center">
         <h1 class="mB50 mT20">Sõidupäevik</h1>
         <button class="btn btn-primary" onclick="maaraAsukoht()">Määra asukoht</button>
         <p class="mT20" id="asukoht"></p>
